# business-card-reader

./: .gitignore  Business-Card-Reader.ipynb  README.md  business-card-reader.org  business-card-reader.py  pyproject.toml  requirements.txt
